test/functions/hilde/bothKeywords.good
bothKeywords.chpl:2: error: External and exported functions cannot be inlined.
